--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "devtinder application where developer meets 🚀",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon src/server",
+    "start": "nodemon src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.0",
+    "mongoose": "^8.6.3",
     "nodemon": "^3.1.6"
   }
 }
